<resources>
    <string name="app_name">Quiz App</string>
    <string name="edit_text_hint">Please Enter Answer</string>
    <string name="submit_button_text">Submit</string>

    <!-- Geography Questions -->
    <string name="question_one">1. True or False: Iceland is covered in ice.</string>
    <string name="question_two">2. Which ocean lies on the east coast of the United States?</string>
    <string name="question_three">3. Which is the world\'s highest mountain?</string>
    <string name="question_four">4. Name one of the Great Lakes.</string>
    <string name="question_five">5. Which of these cities is in Europe?</string>
    <string name="question_six">6. The United Kingdom is comprised of how many countries?</string>
    <string name="question_seven">7. Which of the following countries border France?</string>
    <string name="question_eight">8. Which lake is the arrow pointing to?</string>
    <string name="question_nine">9. Which U.S. state is the Grand Canyon located in?</string>
    <string name="question_ten">10. What is the longest river in the world?</string>

    <!-- Answers -->
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>

    <string name="atlantic">Atlantic Ocean</string>
    <string name="pacific">Pacific Ocean</string>
    <string name="indian">Indian Ocean</string>
    <string name="eastern">Eastern Ocean</string>

    <string name="k2">K2</string>
    <string name="kilimanjaro">Kilimanjaro</string>
    <string name="makalu">Makalu</string>
    <string name="everest">Everest</string>

    <string name="reykjavik">Reykjavik</string>
    <string name="barcelona">Barcelona</string>
    <string name="prague">Prague</string>
    <string name="moscow">Moscow</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="eight">8</string>

    <string name="italy">Italy</string>
    <string name="netherlands">Netherlands</string>
    <string name="germany">Germany</string>
    <string name="spain">Spain</string>

    <string name="huron">Lake Huron</string>
    <string name="superior">Lake Superior</string>
    <string name="erie">Lake Erie</string>
    <string name="michigan">Lake Michigan</string>

    <string name="yellow">Yellow River</string>
    <string name="amazon">Amazon River</string>
    <string name="nile">Nile River</string>
    <string name="congo">Congo River</string>

</resources>