<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E8EAF6"
        android:orientation="vertical">

        <!-- QUESTION 1 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_one" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1_true_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/answer_true"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/q1_false_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/answer_false"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <!-- QUESTION 2 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_two" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/pacific_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/pacific" />

            <RadioButton
                android:id="@+id/atlantic_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/atlantic" />

            <RadioButton
                android:id="@+id/indian_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/indian" />

            <RadioButton
                android:id="@+id/eastern_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/eastern" />
        </RadioGroup>

        <!-- QUESTION 3 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_three" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/everest_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/everest" />

            <RadioButton
                android:id="@+id/kilimanjaro_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/kilimanjaro" />

            <RadioButton
                android:id="@+id/k2_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/k2" />

            <RadioButton
                android:id="@+id/makalu_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/makalu" />
        </RadioGroup>

        <!-- QUESTION 4 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_four" />

        <EditText
            android:id="@+id/q4_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/edit_text_hint" />

        <!-- QUESTION 5 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_five" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/reykjavik_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/reykjavik" />

            <CheckBox
                android:id="@+id/barcelona_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/barcelona" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/prague_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/prague" />

            <CheckBox
                android:id="@+id/moscow_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/moscow" />
        </LinearLayout>

        <!-- QUESTION 6 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_six" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/four_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/four" />

            <RadioButton
                android:id="@+id/five_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/five" />

            <RadioButton
                android:id="@+id/six_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/six" />

            <RadioButton
                android:id="@+id/eight_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/eight" />
        </RadioGroup>

        <!-- QUESTION 7 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_seven" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/italy_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/italy" />

            <CheckBox
                android:id="@+id/netherlands_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/netherlands" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/germany_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/germany" />

            <CheckBox
                android:id="@+id/spain_checkbox"
                style="@style/CheckBoxTextStyle"
                android:text="@string/spain" />
        </LinearLayout>

        <!-- QUESTION 8 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_eight" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="275dp"
            android:scaleType="fitCenter"
            android:src="@drawable/question_eight_image" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/superior_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/superior" />

            <RadioButton
                android:id="@+id/michigan_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/michigan" />

            <RadioButton
                android:id="@+id/huron_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/huron" />

            <RadioButton
                android:id="@+id/erie_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/erie" />
        </RadioGroup>

        <!-- QUESTION 9 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_nine" />

        <EditText
            android:id="@+id/q9_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/edit_text_hint" />

        <!-- QUESTION 10 -->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question_ten" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/amazon_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/amazon" />

            <RadioButton
                android:id="@+id/nile_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/nile" />

            <RadioButton
                android:id="@+id/congo_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/congo" />

            <RadioButton
                android:id="@+id/yellow_radio_button"
                style="@style/RadioButtonTextStyle"
                android:text="@string/yellow" />
        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            style="@style/ButtonStyle"
            android:background="#7986CB"
            android:onClick="getScore"
            android:text="@string/submit_button_text" />
    </LinearLayout>
</ScrollView>